--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,8 +7,9 @@ jobs:
    runs-on: ubuntu-latest
    steps:
      - name: Setup java
-       uses: actions/setup-java@v4.4.0
+       uses: actions/setup-java@v4
        with:
+         distribution: 'temurin'
          java-version: 17
      - name: Setup gradle
        uses: gradle/actions/setup-gradle@v4
