--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,5 +14,5 @@ jobs:
      - name: Setup gradle
        uses: gradle/actions/setup-gradle@v4
      - name: Build with Gradle
-       run: ./gradlew bootjar
+       run: gradle bootjar
      - run: ls -lia build/libs
