ci: print version

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,10 +2,20 @@ on:
   push:
 
 jobs:
+  get-version:
+    uses: shiipou/github-actions/.github/workflows/get-version.yml@main
+    with:
+      release-branches: '^(main)$'
+    
+
   build:
    name: Spring build
    runs-on: ubuntu-latest
+   needs: 
+     - get-version
    steps:
+     - name: Print version
+       run: echo "${{ needs.get-version.outputs.version }}"
      - name: Setup java
        uses: actions/setup-java@v4
        with:
