ci: add echo for get-version

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,11 @@ jobs:
      - get-version
    steps:
      - name: Print version
-       run: echo "${{ needs.get-version.outputs.version }}"
+       run: |
+         echo "${{ needs.get-version.outputs.version }}"
+         echo "${{ needs.get-version.outputs.changelogs }}"
+         echo "${{ needs.get-version.outputs.is-prerelease }}"
+         echo "${{ needs.get-version.outputs.will-release }}"
      - name: Setup java
        uses: actions/setup-java@v4
        with:
