build: build.gradle read version env

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group = 'simplon'
-version = '0.0.1-SNAPSHOT'
+version = System.getenv("VERSION") ?: '0.0.1-SNAPSHOT'
 
 java {
 	toolchain {
