--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,4 +42,7 @@ jobs:
        env:
          VERSION: "${{ needs.get-version.outputs.version }}"
        run: ./gradlew bootjar
-     - run: ls -lia build/libs
+     # - run: ls -lia build/libs
+     - uses: actions/upload-artifact@v4
+       with:
+         path: build/libs/
