--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,19 @@ jobs:
   test:
    name: Spring test
    runs-on: ubuntu-latest
+   services:
+     postgres:
+       image: postgres
+       env:
+         POSTGRES_USER: postgres
+         POSTGRES_DB: spring-security
+         POSTGRES_PASSWORD: postgres
+       # Set health checks to wait until postgres has started
+       options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
    steps:
      - name: Print version
        # pipe pour mettre plusieurs echo dans le run
