--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,7 +43,7 @@ jobs:
      - name: Build with Gradle
        run: ./gradlew test
     
-  # name pour un autre job
+  # id (name) pour un autre job
   build:
    name: Spring build
    runs-on: ubuntu-latest
@@ -77,4 +77,34 @@ jobs:
      # - run: ls -lia build/libs
      - uses: actions/upload-artifact@v4
        with:
+         name: spring
          path: build/libs/
+
+  release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs:
+      - get-version
+      - build
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: spring
+          path: build/
+      - name: Create Github Release
+        env:
+          VERSION: "${{ needs.get-version.outputs.version }}"
+          REPO: "${{ github.repository }}"
+          COMMIT: "${{ github.sha }}"
+        # $REPO = le repo sur lequel on veut que ça se fasse
+        # $COMMIT = le commit en rapport au push (prend donc le bon commit et non le dernier effectué)
+        # $VERSION = la version récupérée du get-version
+        run: |
+          gh release create --repo $REPO --target $COMMIT $VERSION build/*
+
+
+
+
+
+      
